--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,9 +13,10 @@ body {
 
 .container {
     width: 100%;
-    max-width: 700px;
+    max-width: 360px;
     padding: 0 20px;
     margin: 0 auto;
+    display: flex;
 }
 
 button,
