--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,7 +13,7 @@ body {
 
 .container {
     width: 100%;
-    max-width: 360px;
+    max-width: fit-content;
     padding: 0 20px;
     margin: 0 auto;
     display: flex;
@@ -45,6 +45,7 @@ input {
     display: flex;
     justify-content: space-between;
     padding: 0 10px;
+    z-index: -1;
     
     img{
         max-width: 150px;
