--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -5,7 +5,7 @@
     padding: 15px;
     border-radius: 16px;
     cursor: pointer;
-    width: 50px;
+    width: 75px;
     height: 50px;
     color: #fff;
     background-color: $accent-color;
@@ -13,10 +13,6 @@
     color: $blue-2;
     transition: background-color 0.4s;
     font-size: 24px;
-
-    &:hover {
-        // background-color: darken($light-blue, $amount: 10%)
-    }
 
     &--get-res {
         background: #19ACFF;
@@ -33,15 +29,14 @@
         transition: background-color 0.4s;
 
         &:hover {
-            background-color: darken($light-blue, $amount: 10%)
+            background-color: darken($blue-1, 15%)
         }
     }
 
-    // &--number{
-    //     background-color: $blue;
-    //     transition: background-color 0.4s;
-    //     &:hover{
-    //         background-color: darken($blue, 20%)
-    //     }
-    // }
+    &--number{
+        transition: background-color 0.2s;
+        &:hover{
+            background-color: darken($accent-color, 10%)
+        }
+    }
 }
