--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -14,6 +14,10 @@
     transition: background-color 0.4s;
     font-size: 24px;
 
+    @media (max-width: 450px) {
+        width: 55px;
+    }
+
     &--get-res {
         background: #19ACFF;
         box-shadow: -9px 10px 203px rgba(0, 163, 255, 0.4), inset -3px 4px 11px #B0DFFF;
