--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -7,6 +7,10 @@
     margin-top: 50px;
     padding: 40px 20px;
 
+    @media (max-width: 375px) {
+        padding: 20px 5px;
+    }
+
     &__field {
         display: flex;
         width: 100%;
