--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -94,8 +94,6 @@
             grid-template-columns: auto auto auto;
             grid-auto-rows: auto;
             grid-auto-columns: auto;
-            // grid-template-columns: repeat(3, 1fr);
-            // grid-template-rows: repeat(3, 1fr);
             gap: 10px;
 
             .zero {
@@ -107,11 +105,12 @@
 
         &__actions {
             display: grid;
+            grid-template-columns: auto auto;
             grid-template-rows: auto auto auto auto;
             grid-auto-rows: auto;
             grid-auto-columns: auto;
             gap: 10px;
-
+            grid-auto-flow: column;
         }
 
         &__scope {
