refactored error display

--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -68,6 +68,8 @@
 
         .error {
             color: $red;
+            font-weight: normal;
+            // font-size: 14px;
         }
 
         &.visible {
