--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -52,12 +52,9 @@
 
     &__result {
         text-align: center;
-        font-style: italic;
-        font-size: 18px;
         transition: 0.3s;
         width: 100%;
         padding: 5px 20px;
-        color: $text-dark;
         background-color: $accent-color;
         box-shadow: inset 0 1px 0 0 hsl(0deg 0% 100% / 10%);
         border-radius: 5px;
@@ -66,10 +63,15 @@
         visibility: hidden;
         transform: translateY(-20px);
 
+        .result {
+            font-style: italic;
+            font-size: 18px;
+            color: $text-dark;
+        }
+
         .error {
             color: $red;
-            font-weight: normal;
-            // font-size: 14px;
+            font-weight: bold;
         }
 
         &.visible {
@@ -89,7 +91,7 @@
         width: 100%;
         gap: 10px;
 
-        &__header{
+        &__header {
             display: grid;
             grid-template-columns: repeat(6, auto);
         }
