--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -99,56 +99,13 @@
         }
     }
 
-    &__buttons {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+    &__keyboard {
+        display: grid;
+        grid-template-columns: repeat(6, auto);
+        grid-auto-rows: auto;
+        grid-auto-columns: auto;
         gap: 10px;
-
-        &__header {
-            display: grid;
-            grid-template-columns: repeat(6, auto);
-        }
-
-        &__main {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        &__number {
-            display: grid;
-            grid-template-columns: auto auto auto;
-            grid-auto-rows: auto;
-            grid-auto-columns: auto;
-            gap: 10px;
-
-            .zero {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                width: 100%;
-            }
-        }
-
-        &__actions {
-            display: grid;
-            grid-template-columns: auto auto;
-            grid-template-rows: auto auto auto auto;
-            grid-auto-rows: auto;
-            grid-auto-columns: auto;
-            gap: 10px;
-            grid-auto-flow: column dense;
-
-            .button--get-res {
-                grid-row-start: 3;
-                grid-row-end: 5;
-                height: 100%;
-            }
-        }
-
-
     }
-
 }
 
 @keyframes showup {
