created CalculatorDetail block

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: $bg-volor;
+    background-color: $bg-color;
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
 }
