--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -5,12 +5,14 @@
     justify-content: center;
     gap: 10px;
     padding: 20px;
+    margin-top: 30px;
     background-color: $accent-color;
     border-radius: 5px;
     max-width: 500px;
 
     @media (max-width: 375px) {
         padding: 20px 5px;
+        margin-top: 20px;
     }
 
     &__field {
@@ -106,6 +108,18 @@
         grid-auto-columns: auto;
         gap: 10px;
     }
+
+    &__detail{
+        display: none;
+        height: 200px;
+        width: 100%;
+        border-radius: 5px;
+        border: 2px solid $blue-2;
+        margin-top: 40px;
+        padding: 10px;
+        background-color: $bg-color;
+    }
+
 }
 
 @keyframes showup {
