--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,7 +3,7 @@ $red: rgb(185 28 28);
 
 $white: #F0F0F0;
 $black: #000;
-$bg-volor: #F7F8FB;
+$bg-color: #F7F8FB;
 $accent-color: #FBFCFD;
 $blue-1: #ADE2FF;
 $blue-2: #38B9FF;
