Refactored highlightErrors to create an array of spans instead of a string

--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -84,7 +84,7 @@
             color: $gray;
             font-weight: normal;
 
-            span {
+            .error-span {
                 color: $red;
                 font-weight: bold;
             }
