--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -56,6 +56,7 @@
             .error-span {
                 color: $red;
                 font-weight: bold;
+                cursor: pointer;
             }
         }
 
