--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -107,6 +107,7 @@
                 border: 1px solid $red;
                 display: flex;
                 justify-content: space-between;
+                cursor: pointer;
             }
         }
     }
