--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -86,6 +86,10 @@
         border-top: 1px solid $gray;
         padding-top: 10px;
 
+        &.show{
+            display: block;
+        }
+
         &__title{
             font-size: 18px;
             font-weight: bold;
