--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -9,6 +9,7 @@
     background-color: $accent-color;
     border-radius: 5px;
     max-width: 500px;
+    position: relative;
 
     @media (max-width: 375px) {
         padding: 20px 5px;
@@ -79,33 +80,43 @@
         gap: 10px;
     }
 
-    &__detail{
-        display: none;
-        width: 100%;
-        margin-top: 20px;
-        border-top: 1px solid $gray;
+    &__detail {
+        position: absolute;
+        padding: 10px 20px;
+        width: 90%;
+        height: 100%;
+        max-height: 100%;
         padding-top: 10px;
+        background-color: $accent-color;
+        top: 0;
+        transform: translateX(-1000px);
+        border: 1px solid $gray;
+        border-radius: 5px;
+        transition: 0.3s transform;
+        overflow: hidden;
 
-        &.show{
-            display: block;
+        &.show {
+            transform: translateX(-110%);
         }
 
-        &__title{
+        &__title {
             font-size: 18px;
             font-weight: bold;
             text-align: center;
             margin-bottom: 10px;
         }
-        
-        .detail-error-info{
+
+        .detail-error-info {
             display: flex;
             flex-direction: column;
             list-style: none;
-            gap: 5px;
+            gap: 10px;
+            overflow-y: auto;
+            max-height: 100%;
+            padding-bottom: 30px;
 
-
-            li{
-                padding: 10px;
+            li {
+                padding: 5px;
                 text-transform: uppercase;
                 border-radius: 5px;
                 border: 1px solid $red;
