--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -10,6 +10,7 @@
     border-radius: 5px;
     max-width: 500px;
     position: relative;
+    // max-height: 370px;
 
     @media (max-width: 375px) {
         padding: 20px 5px;
@@ -36,13 +37,8 @@
         visibility: hidden;
         transform: translateY(-20px);
         font-style: italic;
-        white-space: pre-wrap;
-        word-wrap: break-word;
-
-        p {
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
+        white-space: nowrap;
+        overflow-y: auto;
 
         .result {
             font-size: 18px;
@@ -87,6 +83,7 @@
         height: 100%;
         max-height: 100%;
         padding-top: 10px;
+        padding-bottom: 60px;
         background-color: $accent-color;
         top: 0;
         transform: translateX(-1000px);
@@ -112,8 +109,9 @@
             list-style: none;
             gap: 10px;
             overflow-y: auto;
+            box-shadow: 0px 15px 10px -15px #111;
+            border-radius: 5px;
             max-height: 100%;
-            padding-bottom: 30px;
 
             li {
                 padding: 5px;
