--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,6 +9,7 @@
 body {
     background-color: $bg-color;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -40,7 +41,7 @@ input {
     z-index: -1;
 }
 
-.bold{
+.bold {
     font-weight: bold;
 }
 
