--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -10,7 +10,7 @@
     border-radius: 5px;
     max-width: 500px;
     position: relative;
-    // max-height: 370px;
+    border: 1px solid $gray;
 
     @media (max-width: 375px) {
         padding: 20px 5px;
@@ -118,9 +118,12 @@
                 text-transform: uppercase;
                 border-radius: 5px;
                 border: 1px solid $red;
-                display: flex;
-                justify-content: space-between;
                 cursor: pointer;
+
+                p {
+                    display: flex;
+                    justify-content: space-between;
+                }
             }
         }
     }
