--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,8 +15,11 @@ body {
 .container {
     width: 100%;
     max-width: fit-content;
+    min-height: 100vh;
     padding: 0 20px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
 
     @media (max-width: 375px) {
         padding: 0 10px;
