--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     gap: 10px;
     padding: 20px;
-    margin-top: 100px;
     background-color: $accent-color;
     border-radius: 5px;
     max-width: 500px;
@@ -78,22 +77,24 @@
 
     &__detail {
         position: absolute;
-        padding: 10px 20px;
-        width: 90%;
-        height: 100%;
+        padding: 10px 5px;
+        width: 25%;
+        height: 350px;
         max-height: 100%;
         padding-top: 10px;
         padding-bottom: 60px;
         background-color: $accent-color;
-        top: 0;
-        transform: translateX(-1000px);
+        top: 50%;
+        left: -100%;
+        transform: translateY(-50%);
         border: 1px solid $gray;
         border-radius: 5px;
-        transition: 0.3s transform;
+        transition: 0.3s left;
         overflow: hidden;
+        font-size: 14px;
 
         &.show {
-            transform: translateX(-110%);
+            left: 0;
         }
 
         &__title {
