--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -17,9 +17,16 @@ body {
     max-width: fit-content;
     min-height: 100vh;
     padding: 0 20px;
+    padding-bottom: 50px;
     margin: 0 auto;
     display: flex;
     align-items: center;
+    gap: 20px;
+
+    @media (max-width: 800px) {
+        flex-direction: column;
+    }
+
 
     @media (max-width: 375px) {
         padding: 0 10px;
