--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -136,7 +136,7 @@
                 border: 1px solid $red;
                 cursor: pointer;
 
-                p {
+                div {
                     display: flex;
                     justify-content: space-between;
                 }
