--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,13 +1,13 @@
 .input {
-    padding: 7px;
-    padding-right: 30px;
+    padding: 3px 7px;
     width: 100%;
     box-shadow: inset 0 1px 0 0 hsl(0deg 0% 100% / 5%);
     background-color: transparent;
     backdrop-filter: blur(1px);
-    border: 2px solid $blue-3;
+    border: 1px solid $blue-3;
     border-radius: 5px;
     color: $text-dark;
     transition: 0.3s;
-    font-size: 21px;
+    font-size: 34px;
+    text-align: right;
 }
