change result styles

--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -36,7 +36,7 @@
         visibility: hidden;
         transform: translateY(-20px);
         font-style: italic;
-        white-space: nowrap;
+        white-space: normal;
         overflow-y: auto;
 
         .result {
