--- a/client/src/styles/loader.scss
+++ b/client/src/styles/loader.scss
@@ -35,6 +35,31 @@
     }
 }
 
+.loader-circle {
+    width: 48px;
+    height: 48px;
+    border: 3px solid $blue-1;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+
+    &::after {
+        content: '';
+        box-sizing: border-box;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        border: 3px solid;
+        border-color: $blue-3 transparent;
+    }
+}
+
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
