--- a/client/src/styles/vars.scss
+++ b/client/src/styles/vars.scss
@@ -8,5 +8,5 @@ $accent-color: #FBFCFD;
 $blue-1: #ADE2FF;
 $blue-2: #38B9FF;
 $blue-3: #109DFF;
-$gray: #858585;
+$gray: #a6a6a6;
 $text-dark: #424242;
