--- a/client/src/styles/calculator.scss
+++ b/client/src/styles/calculator.scss
@@ -28,7 +28,7 @@
         margin: 0;
         width: 100%;
         height: 87px;
-        border: 2px solid $blue-3;
+        border: 1px solid $blue-1;
         box-shadow: inset 0 1px 0 0 hsl(0deg 0% 100% / 5%);
         border-radius: 5px;
         backdrop-filter: blur(1px);
@@ -48,7 +48,7 @@
             margin-bottom: 10px;
 
             &::placeholder {
-                color: inherit;
+                color: $gray;
             }
         }
 
@@ -112,12 +112,29 @@
 
     &__history {
         width: 100%;
-        text-align: right;
+        border-radius: 5px;
+        border: 1px solid $blue-3;
 
-        .history-block {
-            padding: 5px 0;
+        overflow: hidden;
+
+        li {
+            // padding: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 5px;
+
+            &:not(:last-child) {
+                border-bottom: 1px solid $blue-1;
+            }
+        }
+
+        .history-item {
+            padding: 5px 10px;
+            // border-radius: 5px;
             cursor: pointer;
-            border-bottom: 1px solid $blue-3;
+            // border-right: 1px solid $blue-1;
+            // border-left: 1px solid $blue-1;
 
             &:hover {
                 background-color: #e4e6ea;
