--- a/client/src/styles/loader.scss
+++ b/client/src/styles/loader.scss
@@ -10,62 +10,97 @@
         align-items: center;
         background: $bg-color;
     }
-}
 
-.loader-text {
-    display: inline-block;
-    font-size: 48px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color: $blue-1;
-    position: relative;
-
-    &::before {
-        content: '';
+    &.fill-element {
         position: absolute;
-        left: 34px;
-        bottom: 8px;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        border: 5px solid #FFF;
-        border-bottom-color: $blue-3;
-        box-sizing: border-box;
-        animation: rotation 0.6s linear infinite;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $bg-color;
+    }
+
+    &.transparent-bg {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(1px);
     }
 }
 
-.loader-circle {
-    width: 48px;
-    height: 48px;
-    border: 3px solid $blue-1;
+.loader {
+    animation: rotate 1s infinite;
+    height: 50px;
+    width: 50px;
+}
+
+.loader:before,
+.loader:after {
     border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-
-    &::after {
-        content: '';
-        box-sizing: border-box;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        border: 3px solid;
-        border-color: $blue-3 transparent;
-    }
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
 }
 
-@keyframes rotation {
+.loader:before {
+    animation: ball1 1s infinite;
+    background-color: $blue-1;
+    box-shadow: 30px 0 0 $blue-3;
+    margin-bottom: 10px;
+}
+
+.loader:after {
+    animation: ball2 1s infinite;
+    background-color: $blue-3;
+    box-shadow: 30px 0 0 $blue-1;
+}
+
+@keyframes rotate {
     0% {
-        transform: rotate(0deg);
+        transform: rotate(0deg) scale(0.8)
+    }
+
+    50% {
+        transform: rotate(360deg) scale(1.2)
     }
 
     100% {
-        transform: rotate(360deg);
+        transform: rotate(720deg) scale(0.8)
+    }
+}
+
+@keyframes ball1 {
+    0% {
+        box-shadow: 30px 0 0 $blue-3;
+    }
+
+    50% {
+        box-shadow: 0 0 0 $blue-3;
+        margin-bottom: 0;
+        transform: translate(15px, 15px);
+    }
+
+    100% {
+        box-shadow: 30px 0 0 $blue-3;
+        margin-bottom: 10px;
+    }
+}
+
+@keyframes ball2 {
+    0% {
+        box-shadow: 30px 0 0 $blue-1;
+    }
+
+    50% {
+        box-shadow: 0 0 0 $blue-1;
+        margin-top: -20px;
+        transform: translate(15px, 15px);
+    }
+
+    100% {
+        box-shadow: 30px 0 0 $blue-1;
+        margin-top: 0;
     }
 }
