--- a/client/src/styles/calculator.scss
+++ b/client/src/styles/calculator.scss
@@ -122,8 +122,7 @@
             // padding: 5px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            gap: 5px;
+            // justify-content: space-between;
 
             &:not(:last-child) {
                 border-bottom: 1px solid $blue-1;
