--- a/client/src/styles/button.scss
+++ b/client/src/styles/button.scss
@@ -53,7 +53,7 @@
         color: $blue-3;
         transition: background-color 0.4s;
 
-        &:hover {
+        &:not([disabled]):hover {
             background-color: darken($blue-1, 15%)
         }
     }
@@ -61,7 +61,7 @@
     &--number {
         transition: background-color 0.2s;
 
-        &:hover {
+        &:not([disabled]):hover {
             background-color: darken($accent-color, 10%)
         }
     }
