--- a/client/src/styles/calculator.scss
+++ b/client/src/styles/calculator.scss
@@ -27,12 +27,16 @@
         padding: 4px 10px;
         margin: 0;
         width: 100%;
-        height: 87px;
+        height: 75px;
         border: 1px solid $blue-1;
         box-shadow: inset 0 1px 0 0 hsl(0deg 0% 100% / 5%);
         border-radius: 5px;
         backdrop-filter: blur(1px);
         transition: 0.3s border-color;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow: hidden;
 
         &.display-error {
             border-color: $red;
@@ -45,7 +49,6 @@
             color: $text-dark;
             font-size: 34px;
             text-align: right;
-            margin-bottom: 10px;
 
             &::placeholder {
                 color: $gray;
@@ -61,7 +64,7 @@
         p {
             font-style: normal;
             color: $gray;
-            font-size: 18px;
+            font-size: 16px;
         }
     }
 
@@ -115,26 +118,38 @@
         width: 100%;
         border-radius: 5px;
         border: 1px solid $blue-3;
+        height: 175px;
+        position: relative;
 
-        overflow: hidden;
+        .history-block {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
+
+        .history-empty {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $gray;
+        }
 
         li {
-            // padding: 5px;
             display: flex;
             align-items: center;
-            // justify-content: space-between;
+            overflow: hidden;
 
             &:not(:last-child) {
                 border-bottom: 1px solid $blue-1;
+                border-top: 1px solid $blue-1;
             }
         }
 
         .history-item {
             padding: 5px 10px;
-            // border-radius: 5px;
             cursor: pointer;
-            // border-right: 1px solid $blue-1;
-            // border-left: 1px solid $blue-1;
 
             &:hover {
                 background-color: #e4e6ea;
